added user display template and worked on Unit Tests

--- a/FetchWeb/Views/Home/Index.cshtml
+++ b/FetchWeb/Views/Home/Index.cshtml
@@ -45,7 +45,7 @@
                     // On success, 'data' contains a list of products.
                     //$.each(data, function (key, item) {
                         // Add a list item for the product.
-                        $('<li>', { text: formatItem(data) }).appendTo($('#api-test'));
+                        //$('<li>', { text: formatItem(data) }).appendTo($('#api-test'));
                     //});
                 });
         });
